@startuml - UML DatabaseModel for Budweg
hide circle

/'Relationer
SPAREPARTS(<ins>SparePartId</ins> SparePartType, SparePartAmount)
STATION(<ins>StationId</ins>, StationType, StationsName, *SparePartId*)
BRAKECALIPER(<ins>CaliperId</ins>, CaliperType, CaliperStatus, Barcode, CaliperNumber, OrderNumber, Note, *StationId*)
'/
class "SPAREPARTS" <<table>>{
    {static} <<PK>> SparePartId : Int
    {field} SparePartType : NVarChar(50)
    {field} SparePartAmount : Int
    //<<FK>> StationId : Int//
    {method} <<PK>> PK_SPAREPARTS()
    {method} <<FK>> FK_SPAREPARTS_STATION()
}

class "STATION" <<table>>{
    {static} <<PK>> StationId : Int
    {field} StationType : NVarChar(50)
    {field} StationName : NVarChar(50)
    {method} <<PK>> PK_STATION()
}

class "BRAKECALIPER" <<table>>{
    {static} <<PK>> CaliperId : Int
    {field} CaliperType : NVarChar(50)
    {field} CaliperStatus : NVarChar(50)
    {field} Barcode : NVarChar(50)
    {field} CaliperNumber : NVarChar(50)
    {field} OrderNumber : NVarChar(50)
    {field} Note : NVarChar(255)
    //<<FK>> StationId : Int//
    {method} <<PK>> PK_BRAKECALIPER()
    {method} <<FK>> FK_BRAKECALIPER_STATION()
}
'relationer'
SPAREPARTS "0..*" -- "1..*" STATION
BRAKECALIPER "0..*" -- "1..*" STATION


@enduml